bdr.BDR.scala.error
Erreur de compilation :
BDR:32: error: not found: value False
    a= False;
       ^BDR:34: error: not found: value False
  if (a!=False) {
         ^